--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "body-parser": "^1.20.0",
         "bootstrap": "^5.2.1",
-        "express": "^4.18.1",
-        "hbs": "^4.2.0",
-        "mongoose": "^6.6.1",
-        "bcrypt": "^5.0.0",
         "cookie-parser": "^1.4.5",
+        "express": "^4.18.1",
         "express-session": "^1.17.1",
-        "morgan": "^1.10.0"
+        "hbs": "^4.2.0",
+        "libreoffice-convert": "^1.4.1",
+        "mongoose": "^6.6.1",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1"
     }
 }
